--- a/README
+++ b/README
@@ -1,3 +1,8 @@
+To start TinyCube Module, Run:
+	./START_SERVER
+
+To start TinyCube Client, Run:
+	./START_CLIENT
 
 ERROR
 1. ImportError: No module named MySQLdb
